2008-12-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4, generic/vfs.c, doc/vfs.n:
	* configure, configure.in: update to TEA 3.7, bump vfs to v1.4

	* pkgIndex.tcl.in: this is now the sole pkgIndex.tcl script.
	vfs::loadvfs updated to source vfsUtils.tcl right after loading
	the dll.  Package versions updated, removed mk4vfs and zipvfs
	compat packages.

	* Makefile.in, win/makefile.vc: update for removed files

	* library/template/*: add package provide 1.5.2 for each template

	* library/mk4vfscompat.tcl (removed): remove old compat pkg
	* library/zipvfscompat.tcl (removed): remove old compat pkg

	* library/tclIndex (removed): users should package require the
	appropriate driver, not rely on autoload
	* library/pkgIndex.tcl (removed): impotent index files
	* library/template/pkgIndex.tcl (removed):

	* tests/all.tcl (vfsCreateInterp): simplify the test to require
	vfs as the main interps do.

	* library/vfslib.tcl: remove vfs::normalize compat proc
	bump vfslib to 1.4

	* library/mk4vfs.tcl: remove unused lassign defn

	* library/starkit.tcl (header): require namespace-based vfs driver
	(eg. vfs::mk4 instead of mk4vfs).  bump starkit to v1.3.3

	* mac/* (removed): removed outdated Mac classic pieces

	* Makefile.in (install-lib-binaries): use lib_BINARIES for the
	binary install list. [Bug 1699827]
	Install pkgIndex.tcl for static or shared build. [Bug 699176]
	(pkgIndex.tcl): add rebuild target

2008-11-20  Andreas Kupries  <andreask@activestate.com>

	* library/starkit.tcl (_startup, autoextend): Replaced the buggy
	  'vfs::filesystem fullynormalize' with the ok 'fullnormalize'
	  defined in the same file. Now 'starkit::startup' handles
	  sym-links to a starpack ok when detecting the wrap mode.

2008-10-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl.in, library/pkgIndex.tcl: update vfs::tar to 0.91
	* library/tarvfs.tcl: update vfs::tar to use only its own
	namespace and not conflict with tcllib tar. [Bug 80465]
